Ajuste JwtTokenProvider